Fixed height for social banner when on mobile

--- a/code/client/src/styling/compiledStyles.css
+++ b/code/client/src/styling/compiledStyles.css
@@ -40,6 +40,7 @@ input, textarea {
 */
 .social-banner {
   padding: 0.5rem;
+  max-height: 7rem;
   background-color: black;
   display: flex;
   flex-direction: column;
